--- a/prj1/public/resize.html
+++ b/prj1/public/resize.html
@@ -4,20 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/index.css">
     <title>Document</title>
+    <style>
+        body{
+            margin: 0;
+            padding: 0;
+        }
+    </style>
 </head>
-<body>
-    <a href="resize.html">
-        resize
-    </a>
-
-    <a href="">
-
-    </a>
-
-    <a href="">
-
-    </a>
+<body on>
+    <canvas id="myCanvas"></canvas>
+    <script src="js/resize.js"></script>
 </body>
 </html>
